Полный редизайн сайта: микросервисная архитектура, админ-панель, новые разделы
- Создана микросервисная архитектура (frontend, admin, api)
- Добавлена админ-панель на порту 3001 для управления контентом
- Создан API сервер на порту 3002 для управления данными
- Добавлены новые разделы: Статьи/СМИ, Команда, Карьера
- Обновлен раздел О компании с новым текстом из брифа
- Обновлена статистика: 50% оптимизация, 300+ партнеров, 93% NPS
- Обновлен адрес: г. Алматы, ул. Шашкина, 24, БЦ K Plaza
- Добавлены комментарии в код с объяснениями
- Обновлен раздел Продукты с информацией о клиентах из API
- Создана документация: ARCHITECTURE.md, SETUP.md, CHANGELOG.md

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\" \"npm run dev:admin\"",
+    "dev:api": "cd api && npm run dev",
+    "dev:admin": "cd admin && npm run dev",
+    "install:all": "npm install && cd api && npm install && cd ../admin && npm install"
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
