--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,11 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Измените на название вашей основной ветки (main, master, или название вашей ветки)
-  workflow_dispatch:  # Позволяет запускать вручную из GitHub UI
+      - main
+  workflow_dispatch:
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: write
 
 concurrency:
   group: "pages"
@@ -17,14 +15,13 @@ concurrency:
 
 jobs:
   deploy:
-    timeout-minutes: 15
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -38,18 +35,11 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          # Замените 'landing-main' на название вашего репозитория
-          # Если репозиторий называется 'username.github.io', оставьте пустым или '/'
           VITE_BASE_PATH: /landing-main/
       
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-      
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './dist'
-      
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          cname: false
